[tool.poetry]
name = "pyes-example-sqlalchemy-intransaction"
version = "0.1.0"
description = "Example usage of python Event Sourcery framework with SQLAlchemy untransaction subsbscription backend."
authors = ["Łukasz Żukowski <lukasz.zukowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-event-sourcery = {version = "*", extras = ["sqlalchemy"]}


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
mypy = "^1.10.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
